<resources>

    <string name="facebook_app_id">432487184789836</string>
    <string name="fb_login_protocol_scheme">fb432487184789836</string>

    <string name="app_name">Intern management</string>
    <string name="dash_board">Dash board</string>
    <string name="chat">Chat</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_new_task">New task</string>
    <string name="search_header">Search</string>
    <string name="notification">Notifications</string>
    <string name="your_mentees">Your mentees</string>
    <string name="mentor_task_detail">Detail task</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_task">Save</string>
    <string name="openEvaluations">See mentee evaluations</string>
    <string name="search_user">Search</string>
    <string name="evaluation_profile">Evaluation profile</string>
    <string name="evaluation">Evaluation</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="evaluation_criteria">Criteria</string>
    <string name="criteria_mark">0/10</string>
    <string name="your_comment">Your comment</string>
    <string name="task_reference_detail">Reference detail</string>

    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="email">Email</string>
    <string name="evaluations">See your evaluations</string>

    <string name="camera">Camera</string>
    <string name="gallery">Choose from gallery</string>
    <string name="close">Close</string>

    <string name="log_in_statement">Welcome gumi_er</string>
    <string name="et_user_name_log_in">Your username</string>
    <string name="et_pwd_log_in">Password</string>
    <string name="et_search_task">Search your task</string>
    <string name="et_search_your_mentee">Search your mentees</string>
    <string name="tv_edit_profile">Edit profile</string>
    <string name="log_in">Log in</string>
    <string name="tv_log_out">Log out</string>
    <string name="tv_all_task_dash_board">Your tasks (%d)</string>
    <string name="et_task_name">Whatever you want to do?</string>
    <string name="tv_mentee_do_task">References</string>
    <string name="ask_for_log_out">You really want to log out?</string>
    <string name="all_evaluations">All evaluations (%d)</string>
    <string name="under_management">Managing</string>
    <string name="have_not_managed_yet">Not managing</string>
    <string name="mentor">Mentor</string>
    <string name="mentee">Mentee</string>
    <string name="max_of_task_reference_mark">/10</string>
    <string name="mark_title">Marks</string>
    <string name="comment_from_mentor">Your mentors comment</string>
    <string name="prepare_button">Prepare your submission</string>
    <string name="have_no_comment_yet">Your mentor have not given comment</string>
    <string name="review_your_submission">Review your submission</string>
    <string name="submit_task">Submit task</string>
    <string name="submit_button">Submit</string>
    <string name="submission_note">Make your notes for the submission here..</string>
    <string name="attach_image">Attach your images</string>
    <string name="over_view">| Overview</string>
    <string name="your_mentors">Your mentors</string>
    <string name="have_not_mentor_yet">You have no mentor yet</string>
    <string name="good_morning_mentor">Good morning mentor</string>
    <string name="good_afternoon_mentor">Good afternoon mentor</string>
    <string name="good_evening_mentor">Good evening mentor</string>
    <string name="good_morning">Good morning mentee</string>
    <string name="good_afternoon">Good afternoon mentee</string>
    <string name="good_evening">Good evening mentee</string>
    <string name="no_data">Data not available</string>
    <string name="no_data_yet">Have no data yet</string>
    <string name="no_event_yet">No event yet</string>
    <string name="submitted_state">Submitted</string>
    <string name="not_submitted_state">Not submitted</string>
    <string name="reviewed_state">Reviewed</string>
    <string name="no_search_result">No search result</string>
    <string name="no_evaluation_result">Have not evaluations yet</string>
    <string name="no_task">Have not task yet</string>
    <string name="reviewed">*You only give a review one time</string>
    <string name="not_reviewed">*Not reviewed</string>
    <string name="permission_title_message">Permission</string>
    <string name="permission_message">Opp!, We need your permission to process this function. Please go to settings and turn on permission for us</string>
    <string name="avatar_update_failed">Avatar update failed</string>
    <string name="info_update_failed">Info update failed</string>
    <string name="behavior_mark">Behavior mark</string>
    <string name="knowledge_mark">Knowledge mark</string>
    <string name="proactive_mark">Proactive mark</string>
    <string name="good_task">Well completed tasks</string>
    <string name="bad_task">Medium completed tasks</string>
    <string name="uncompleted_task">Uncompleted tasks</string>
    <string name="task_statistic_note">The task is considered well completed must be higher than 7 points</string>
    <string name="add_mentee_statement">Take care of this mentee?</string>
    <string name="no_statistic_yet">No statistic yet</string>
    <string name="log_in_alert">Username or password is empty</string>
    <string name="reviewing_alert">The review must have a comment</string>
    <string name="search_your_mentees">Search your mentees</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>