<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/lv2">

    <TextView
        android:id="@+id/tvLogOutDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ask_for_log_out"
        android:textColor="@color/icon_or_text_color"
        android:textSize="@dimen/textBody"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separateLineLogOutAlert"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/lv2"
        android:background="@color/separate_line_or_et_background_color"
        app:layout_constraintTop_toBottomOf="@id/tvLogOutDialogTitle" />

    <TextView
        android:id="@+id/tvLogOutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lv2"
        android:gravity="center"
        android:text="@string/tv_log_out"
        android:textColor="@color/color_strong_alert"
        android:textSize="@dimen/textLargeBody"
        app:layout_constraintTop_toBottomOf="@id/separateLineLogOutAlert" />
    <TextView
        android:id="@+id/tvCancelDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lv2"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/mentee_strong_color"
        android:textSize="@dimen/textLargeBody"
        app:layout_constraintTop_toBottomOf="@id/tvLogOutDialog" />
</androidx.constraintlayout.widget.ConstraintLayout>