<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MenteeSearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_or_bottom_view_color"
        android:paddingStart="@dimen/lv3"
        android:paddingTop="@dimen/lv2"
        android:paddingEnd="@dimen/lv3"
        android:paddingBottom="@dimen/lv2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSearchHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_header"
            android:textColor="@color/black"
            android:textSize="@dimen/textTitle"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibSearchUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_search"
            android:tint="@color/mentee_strong_color"
            app:layout_constraintBottom_toBottomOf="@id/tvSearchHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvSearchHeader" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvYourMentors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/lv3"
        android:layout_marginTop="@dimen/lv3"
        android:text="@string/your_mentors"
        android:textColor="@color/black"
        android:textSize="@dimen/textBody"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchHeader" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMyMentor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="@dimen/lv3"
        android:paddingTop="@dimen/lv2"
        android:paddingEnd="@dimen/lv3"
        android:paddingBottom="@dimen/lv3"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvYourMentors" />

    <TextView
        android:id="@+id/tvMenteeSearchNoData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/have_not_mentor_yet"
        android:textColor="@color/icon_or_text_color"
        android:textSize="@dimen/textBody"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/rvMyMentor" />

    <ProgressBar
        android:id="@+id/pbSearchLoading"
        android:layout_width="@dimen/lv3"
        android:layout_height="@dimen/lv3"
        android:indeterminate="true"
        android:indeterminateTint="@color/status_bar_color"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchHeader"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>